# discord-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  run  run.ps1
include/botway/: botway.h
include/bwbot/: bwbot.h
src/: main.cpp
